# PID-Tag-Puller

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  test_extraction.py  test_gui.py
src/: __init__.py  main.py
src/csv_exporter/: __init__.py  exporter.py
src/gui/: __init__.py  main_window.py
src/pdf_processor/: __init__.py  extractor.py
src/tag_extractor/: __init__.py  extractor.py  patterns.py
tests/: __init__.py  test_tag_extractor.py
